--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <p>Uma loja perfeita para quem quer ter alto rendimento em esportes.</p>
         
         <h3>Produtos em destaque </h3>
-        <a href="futebol/index.html"><img src="imgs/destaque_futebol.jpg" alt="Futebol Destaque" width="200"></a>
-        <a href="basquete/index.html"><img src="imgs/destaque_basquete.jpg" alt="Basquete Destaque" width="200"></a>
+        <a href="futebol/index.html"><img src="imgs/destaque_futebol.jpg" alt="Futebol Destaque" width="200" ></a>
+        <a href="basquete/index.html"><img src="imgs/destaque_basquete.jpg" alt="Basquete Destaque" width="200" ><img src="imgs/imgbasquete.jpg" alt="logo basquete"></a>
         <a href="baseball/index.html"><img src="imgs/destaque_baseball.jpg" alt="Baseball Destaque" width="200"></a> 
         <h3>Imagens da Loja</h3>
             <img src="imgs/loja1.jpg" alt="Loja 1" width="300">
