--- a/index.html
+++ b/index.html
@@ -21,18 +21,21 @@
                 </li>
             </ul>
         </nav>
+        <hr>
 
         <h2>Bem vindo a HG Sports !</h2>
         <p>Uma loja perfeita para quem quer ter alto rendimento em esportes.</p>
         
         <h3>Produtos em destaque </h3>
-        <a href="futebol/index.html"><img src="imgs/destaque_futebol.jpg" alt="Futebol Destaque" width="200" ></a>
-        <a href="basquete/index.html"><img src="imgs/destaque_basquete.jpg" alt="Basquete Destaque" width="200" ><img src="imgs/imgbasquete.jpg" alt="logo basquete" width="100"></a>
-        <a href="baseball/index.html"><img src="imgs/destaque_baseball.jpg" alt="Baseball Destaque" width="200"></a> 
+        <a href="futebol/index.html"><img src="imgs/destaque_futebol.jpg" alt="Futebol Destaque" width="200" ></a> 
+        <a href="basquete/index.html"><img src="imgs/destaque_basquete.jpg" alt="Basquete Destaque" width="200" ></a>
+        <a href="baseball/index.html"><img src="imgs/destaque_baseball.jpg" alt="Baseball Destaque" width="200"></a>
         <h3>Imagens da Loja</h3>
             <img src="imgs/loja1.jpg" alt="Loja 1" width="300">
-            <img src="imgs/loja2.jpg" alt="Loja 2" width="300">
-        <h3>Onde estamos</h3>
+            <img src="imgs/loja2.jpg" alt="Loja 2" width="350">
+        <hr>
+
+            <h3>Onde estamos</h3>
         <iframe src="https://maps.app.goo.gl/muHv53RWyi3YuaHW7" width="400" height="300"></iframe>    </header>
         
         <h3>Formas de pagamento</h3>
