futebol index.html

--- a/esporte/futebol/index.html
+++ b/esporte/futebol/index.html
@@ -21,8 +21,15 @@
 
         <h2>Sobre o Futebol</h2>
             <p>O futebol é o esporte mais conhecido mundialmente. Recheado de carques como HUlk , Messi e Neymar , é um esporte muito tradicional . Seu principal campeonato é a copa do mundo , sonho de qualquer jogador .</p>
-             
+             <img src="imgs/messi.jpg" alt="imagem do messi"><width="200" >
             <a href="https://pt.wikipedia.org/wiki/Futebol" target="_blank">Saiba mais</a>
+        
+            <h3>Produtos</h3>
+          <div>
+            <h4>CHUTEIRA NIKE PHANTOM GT CL FG MASCULINO BRANCO</h4>
+                <img src="../imgs/chut.jpg" width="200">
+                <p>R$ 239,90</p>
 
+        </div>      
     </body>
 </html>
