--- a/esporte/futebol/index.html
+++ b/esporte/futebol/index.html
@@ -1,35 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="HG Sports" content="width=device-width, initial-scale=1.0">
-    <title>Futebol</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Futebol</title>
 </head>
 <body>
+
   <img src="../imgs/logo.png" alt="Logo da Loja" width="150">
-    <h1>HG Sports</h1>
+  <h1>HG Sports</h1>
 
-     <nav>
-            <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="futebol/index.html">Futebol</a></li>
-                <li><a href="basquete/index.html">Basquete</a></li>
-                <li><a href="baseball/index.html">Baseball</a></li>
-                </li>
-            </ul>
-        </nav>
+  <nav>
+    <ul>
+      <li><a href="../index.html">Início</a></li>
+      <li><a href="../futebol/index.html">Futebol</a></li>
+      <li><a href="../basquete/index.html">Basquete</a></li>
+      <li><a href="../baseball/index.html">Baseball</a></li>
+    </ul>
+  </nav>
 
-        <h2>Sobre o Futebol</h2>
-            <p>O futebol é o esporte mais conhecido mundialmente. Recheado de carques como HUlk , Messi e Neymar , é um esporte muito tradicional . Seu principal campeonato é a copa do mundo , sonho de qualquer jogador .</p>
-             <img src="imgs/messi.jpg" alt="imagem do messi"><width="200" >
-            <a href="https://pt.wikipedia.org/wiki/Futebol" target="_blank">Saiba mais</a>
-        
-            <h3>Produtos</h3>
-          <div>
-            <h4>CHUTEIRA NIKE PHANTOM GT CL FG MASCULINO BRANCO</h4>
-                <img src="../imgs/chut.jpg" width="200">
-                <p>R$ 239,90</p>
+  <h2>Sobre o Futebol</h2>
+  <p>
+    O futebol é o esporte mais conhecido mundialmente. Recheado de craques como Hulk, Messi e Neymar,
+    é um esporte muito tradicional. Seu principal campeonato é a Copa do Mundo, sonho de qualquer jogador.
+  </p>
 
-        </div>      
-    </body>
+  <img src="../imgs/messi.jpg" alt="Imagem do Messi" width="200">
+  <p><a href="https://pt.wikipedia.org/wiki/Futebol" target="_blank">Saiba mais</a></p>
+
+  <h3>Produtos</h3>
+
+  <div>
+    <h4>Chuteira Nike Phantom GT CL FG Masculino Branco</h4>
+    <img src="../imgs/chut.jpg" width="200">
+    <p>R$ 239,90 - Tamanhos: 39, 40, 41, 42, 43</p>
+    <ul>
+      <li>Referência: CK8459-160</li>
+      <li>Composição:
+        <ul>
+          <li>Externa: Sintético</li>
+          <li>Forro: Tecido</li>
+          <li>Solado: Borracha</li>
+        </ul>
+      </li>
+      <li>Indicado para campo</li>
+      <li>Fechamento com cadarço</li>
+    </ul>
+  </div>
+
+  <div>
+    <h4>Bola Futebol de Campo Nike CBF Academy Brasileirão 2025</h4>
+    <img src="../imgs/bolaf.jpg" width="200">
+    <p>R$ 298,90 - Tamanho: Único</p>
+    <ul>
+      <li>Marca: NIKE</li>
+      <li>Material: Borracha, Poliéster, Poliuretano (PU)</li>
+      <li>Indicado para campo</li>
+      <li>Peso do produto: 440 gramas</li>
+    </ul>
+  </div>
+
+  <div>
+    <h4>Camisa II Atlético Mineiro 25/26</h4>
+    <img src="../imgs/chut.jpg" width="200">
+    <p>R$ 399,99 - Tamanhos: P, M, G, GG, EGG</p>
+    <ul>
+      <li>Marca: Adidas</li>
+      <li>Material: Poliéster</li>
+      <li>Indicado para: Jogo</li>
+      <li>Gola: Gola Careca</li>
+      <li>Definição da Tecnologia: Tecido antiumidade que absorve o suor e ajuda a manter a pele seca e confortável</li>
+    </ul>
+  </div>
+
+</body>
 </html>
