adiciona todos os arquivos html

--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <img src="../imgs/logo.png" alt="Logo da Loja" width="150">
+<img src="../../imgs/logo.png" alt="logo da loja" width="150" />
   <h1>HG Sports</h1>
 
   <nav>
@@ -27,8 +27,8 @@
     Basquete não é só um esporte, mas sim um estilo de vida. BALL IS LIFE.
   </p>
 
-  <img src="../imgs/PAPI.jpg" alt="imagem do Papai LeBron" width="200">
-  <img src="../imgs/vince.jpg" alt="imagem do Vince" width="200">
+  <img src="../../imgs/PAPI.jpg" alt="imagem do Papai LeBron" width="200">
+  <img src="../../imgs/vince.jpg" alt="imagem do Vince" width="200">
 
   <p><a href="https://pt.wikipedia.org/wiki/Basquetebol" target="_blank">Saiba mais</a></p>
 
@@ -36,7 +36,7 @@
 
   <div>
     <h4>Nike Kobe 6 Protro Grinch Green Apple</h4>
-    <img src="../imgs/destaqueb.jpg" width="200">
+    <img src="../../imgs/destaqueb.jpg" width="200">
     <p>R$ 899,99 - Tamanhos: 39, 40, 41, 42, 43</p>
     <ul>
       <li>Marca: NIKE</li>
@@ -55,7 +55,7 @@
 
   <div>
     <h4>Bola Basquete NBA Wilson Forge Pro Midnight 7</h4>
-    <img src="../imgs/spalding.jpg" width="200">
+    <img src="../../imgs/spalding.jpg" width="200">
     <p>R$ 313,49 - Tamanho: 7</p>
     <ul>
       <li>Cor: Preta</li>
@@ -68,7 +68,7 @@
 
   <div>
     <h4>Regata Jersey NBA Nike Los Angeles Lakers Lebron James Nº 23</h4>
-    <img src="../imgs/jersey.jpg" width="200">
+    <img src="../../imgs/jersey.jpg" width="200">
     <p>R$ 617,49 - Tamanhos: P, M, G, GG, EGG - Amarelo + Roxo</p>
     <ul>
       <li>Marca: NIKE</li>
