--- a/esporte/futebol/index.html
+++ b/esporte/futebol/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <img src="../imgs/logo.png" alt="Logo da Loja" width="150">
+  <img src="../../imgs/logo.png" alt="Logo da Loja" width="150">
   <h1>HG Sports</h1>
 
   <nav>
@@ -25,14 +25,14 @@
     é um esporte muito tradicional. Seu principal campeonato é a Copa do Mundo, sonho de qualquer jogador.
   </p>
 
-  <img src="../imgs/messi.jpg" alt="Imagem do Messi" width="200">
+  <img src="../../imgs/messi.jpg" alt="Imagem do Messi" width="200">
   <p><a href="https://pt.wikipedia.org/wiki/Futebol" target="_blank">Saiba mais</a></p>
 
   <h3>Produtos</h3>
 
   <div>
     <h4>Chuteira Nike Phantom GT CL FG Masculino Branco</h4>
-    <img src="../imgs/chut.jpg" width="200">
+    <img src="../../imgs/chut.jpg" width="200">
     <p>R$ 239,90 - Tamanhos: 39, 40, 41, 42, 43</p>
     <ul>
       <li>Referência: CK8459-160</li>
@@ -50,7 +50,7 @@
 
   <div>
     <h4>Bola Futebol de Campo Nike CBF Academy Brasileirão 2025</h4>
-    <img src="../imgs/bolaf.jpg" width="200">
+    <img src="../../imgs/bolaf.jpg" width="200">
     <p>R$ 298,90 - Tamanho: Único</p>
     <ul>
       <li>Marca: NIKE</li>
@@ -62,7 +62,7 @@
 
   <div>
     <h4>Camisa II Atlético Mineiro 25/26</h4>
-    <img src="../imgs/chut.jpg" width="200">
+    <img src="../../imgs/galo.jpg" width="200">
     <p>R$ 399,99 - Tamanhos: P, M, G, GG, EGG</p>
     <ul>
       <li>Marca: Adidas</li>
