--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
     <p>Uma loja perfeita para quem quer ter alto rendimento em esportes.</p>
 
     <h3>Produtos em destaque</h3>
-    <a href="futebol/index.html">
+    <a href="esporte/futebol/index.html">
       <img src="imgs/chut.jpg" alt="Futebol Destaque" width="200" />
     </a>
 
-    <a href="basquete/index.html">
+    <a href="esporte/basquete/index.html">
       <img src="imgs/destaqueb.jpg" alt="Basquete Destaque" width="200" />
     </a>
 
-    <a href="baseball/index.html">
+    <a href="esporte/baseball/index.html">
       <img src="imgs/destaquebase.jpg" alt="Baseball Destaque" width="200" />
     </a>
 
